--- a/app/src/main/res/layout/game_state_test.xml
+++ b/app/src/main/res/layout/game_state_test.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:editable="false"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine" />
