--- a/app/src/main/res/layout/calico_human_player.xml
+++ b/app/src/main/res/layout/calico_human_player.xml
@@ -321,7 +321,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/nothing_half" />
+                        android:src="@drawable/nothing_half"
+                        android:visibility="invisible" />
 
                     <ImageView
                         android:id="@+id/board00"
@@ -370,7 +371,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/nothing_full" />
+                        android:src="@drawable/nothing_full"
+                        android:visibility="invisible" />
 
                 </LinearLayout>
 
@@ -443,7 +445,8 @@
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:clickable="true"
-                        android:src="@drawable/nothing_half2" />
+                        android:src="@drawable/nothing_half2"
+                        android:visibility="invisible" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -458,7 +461,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/nothing_half" />
+                        android:src="@drawable/nothing_half"
+                        android:visibility="invisible" />
 
                     <ImageView
                         android:id="@+id/board20"
@@ -583,7 +587,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/nothing_half2" />
+                        android:src="@drawable/nothing_half2"
+                        android:visibility="invisible" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -598,7 +603,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/nothing_half" />
+                        android:src="@drawable/nothing_half"
+                        android:visibility="invisible" />
 
                     <ImageView
                         android:id="@+id/board40"
@@ -723,7 +729,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/nothing_half2" />
+                        android:src="@drawable/nothing_half2"
+                        android:visibility="invisible" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -738,7 +745,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/nothing_half" />
+                        android:src="@drawable/nothing_half"
+                        android:visibility="invisible" />
 
                     <ImageView
                         android:id="@+id/board60"
@@ -787,7 +795,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/nothing_full" />
+                        android:src="@drawable/nothing_full"
+                        android:visibility="invisible" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
