--- a/app/src/main/res/layout/calico_human_player.xml
+++ b/app/src/main/res/layout/calico_human_player.xml
@@ -22,6 +22,8 @@
                 android:id="@+id/objectives"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:background="@android:color/holo_purple"
                 android:text="View Objectives"
                 android:textSize="20sp" />
         </LinearLayout>
