--- a/app/src/main/res/layout/calico_objectives_menu.xml
+++ b/app/src/main/res/layout/calico_objectives_menu.xml
@@ -401,6 +401,77 @@
 
                         </LinearLayout>
 
+                        <ImageView
+                            android:id="@+id/imageView17"
+                            android:layout_width="match_parent"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginBottom="15dp"
+                            android:adjustViewBounds="true"
+                            android:src="@android:color/darker_gray" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:id="@+id/imageView21"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:src="@drawable/fourkind_goal" />
+
+                            <ImageView
+                                android:id="@+id/imageView30"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:src="@drawable/threekind_goal" />
+
+                            <ImageView
+                                android:id="@+id/imageView31"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:src="@drawable/twokind_goal" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView18"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="A 4-of-a-color and a pair of colors\nOR\nA 4-of-a-pattern and a pair of patterns"
+                                android:textAlignment="center"
+                                android:textSize="34sp" />
+
+                            <TextView
+                                android:id="@+id/textView19"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="A 3-of-a-color, a pair of colors, and a single color\nOR\nA 3-of-a-pattern, a pair of patterns, and a single pattern"
+                                android:textAlignment="center"
+                                android:textSize="34sp" />
+
+                            <TextView
+                                android:id="@+id/textView20"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Two different pairs of colors and two different single colors\nOR\nTwo different pairs of patterns and two different single patterns"
+                                android:textAlignment="center"
+                                android:textAllCaps="false"
+                                android:textSize="34sp" />
+
+                        </LinearLayout>
+
                     </LinearLayout>
 
                     <ImageView
